# cmus_installer

./: README.md  package.json  pnpm-lock.yaml
src/: App.vue  api.js  main.js  router.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: download.rs  install.rs  main.rs  progress.rs  unzipper.rs  utils.rs
src/components/: InstallationOptions.vue  InstallationProgress.vue  InstallationScreen.vue  PathSelector.vue  SelectVersion.vue  StartScreen.vue
